Fix: seo, blog tags, decap cms blog tags

--- a/src/content/blog/becoming-a-web-developer-in-2023.mdx
+++ b/src/content/blog/becoming-a-web-developer-in-2023.mdx
@@ -4,11 +4,9 @@ description: "Get started on your career in web development in 2023 with this ul
 date: 2022-12-31T14:58:16.000Z
 thumbnail: '/public/images/pexels-olia-danilevich-4974915.jpg'
 tags:
-  - Web Development
-  - Programming
-  - Guide
-  - Beginner
+  - Development
   - Best Practices
+  - Tutorial
 ---
 
 ## Table of Contents
