--- a/src/content/blog/first-github-pull-request-tutorial.mdx
+++ b/src/content/blog/first-github-pull-request-tutorial.mdx
@@ -4,11 +4,9 @@ description: 'Master the art of GitHub Pull Requests with this beginner-friendly
 date: '2023-09-02T15:41:00.000Z'
 thumbnail: '/public/images/github-first-pr-guide.png'
 tags:
-  - Programming
+  - Development
   - Git
   - Tutorial
-  - Beginner
-  - Guide
 ---
 
 ## Table of Contents
