--- a/src/content/blog/git-and-version-control.mdx
+++ b/src/content/blog/git-and-version-control.mdx
@@ -4,10 +4,8 @@ description: 'Learn the basics of Git and version control, and how to use them e
 date: 2022-12-03T15:41:56.238095
 thumbnail: '/public/images/pexels-realtoughcandycom-11035539.jpg'
 tags:
-  - Programming
+  - Development
   - Git
-  - Best Practices
-  - Beginner
   - Tutorial
 ---
 
