--- a/src/content/blog/html-css-fundamentals.mdx
+++ b/src/content/blog/html-css-fundamentals.mdx
@@ -4,11 +4,9 @@ description: 'Get started with HTML and CSS, the fundamental building blocks of 
 date: 2022-12-06T18:18:12.000Z
 thumbnail: '/public/images/pexels-lukas-574071.jpg'
 tags:
-  - Web Development
-  - HTML
-  - CSS
   - Frontend
-  - Beginner
+  - Tutorial
+  - CSS
 ---
 
 ## Table of Contents
