--- a/src/content/blog/getting-started-with-typescript.mdx
+++ b/src/content/blog/getting-started-with-typescript.mdx
@@ -4,11 +4,9 @@ description: "In this beginner's guide, we'll cover the basics of TypeScript and
 date: 2022-08-23T16:23:21.000Z
 thumbnail: '/public/images/typescript.jpg'
 tags:
-  - Programming
+  - Development
   - TypeScript
-  - Web Development
-  - Beginner
-  - Guide
+  - Tutorial
 ---
 
 ## Table of Contents
