Fix: update blog tags and remove some old bad posts

--- a/src/content/blog/tailwind-css-in-2023.mdx
+++ b/src/content/blog/tailwind-css-in-2023.mdx
@@ -5,7 +5,7 @@ date: 2023-09-03T15:41:00.000Z
 thumbnail: '/public/images/tailwind-css-in-2023.png'
 tags:
   - Frontend
-  - CSS
+  - Tailwind CSS
   - Best Practices
 ---
 
