fix: clarify installation steps and improve command instructions for DeepSeek R1

--- a/src/content/blog/ollama-deepseek-r1-unsupported-amd-radeon-6600xt.mdx
+++ b/src/content/blog/ollama-deepseek-r1-unsupported-amd-radeon-6600xt.mdx
@@ -69,19 +69,15 @@ To enable ROCm support for your GPU:
 With the setup complete, install DeepSeek R1 using Ollama:
 
 1. Visit the [Ollama model library](https://ollama.com/library/deepseek-r1:1.5b).
-2. Copy the command from the top right of the page:
+2. Copy the command from the top right of the page, open a terminal and paste the command:
    ```
    ollama run deepseek-r1:1.5b
    ```
-3. Open a terminal (Windows PowerShell or Command Prompt) and paste the command:
-   ```
-   ollama run deepseek-r1:1.5b
-   ```
-4. This will download and install the model. Once complete, the chat interface will start.
+3. This will download and install the model. Once complete, the chat interface will start.
 
 ![DeepSeek R1 running in Windows Terminal](/images/ollama-deepseek-terminal.png)
 
-5. To exit the chat, type:
+4. To exit the chat, type:
    ```
    /bye
    ```
@@ -96,7 +92,7 @@ To ensure the model is running on your GPU and not your CPU:
    ```
 2. If the installation is successful, you should see something like `100% GPU` usage.
 
-For additional commands:
+Additional useful commands:
 
 - List installed models:
   ```
