Update Blog “one-dark-modern-pro-–-the-perfect-vs-code-theme”

--- a/src/content/blog/one-dark-modern-pro-–-the-perfect-vs-code-theme.mdx
+++ b/src/content/blog/one-dark-modern-pro-–-the-perfect-vs-code-theme.mdx
@@ -21,7 +21,7 @@ A **VS Code theme** that combines the best of both worlds:
 * Clean UI colors by VS Code's Dark Modern theme, that don’t distract from the code.
 * A darker background that helps with focus and reduces eye strain.
 
-![Image of code example using One Dark Modern Pro VS code theme](/public/images/code-example.png)
+![Image of code example using One Dark Modern Pro VS code theme](/images/code-example.png)
 
 ## Try It Out
 
