Refactor: disable Decap CMS editorial flow, move blog images from public to src folder and adjust decap config and blog posts image paths

--- a/src/content/blog/one-dark-modern-pro-–-the-perfect-vs-code-theme.mdx
+++ b/src/content/blog/one-dark-modern-pro-–-the-perfect-vs-code-theme.mdx
@@ -2,26 +2,26 @@
 title: One Dark Modern Pro – The Perfect VS Code Theme?
 description: Upgrade your VS Code experience with One Dark Modern Pro, a sleek
   and high-contrast theme that combines One Dark Pro’s syntax colors with VS
-  Code’s Dark Modern UI. Perfect for developers who want a polished and
-  distraction-free workspace.
+  Code’s Dark Modern UI.
 date: 2025-02-06
 author: aleksa-codes
-thumbnail: /public/images/theme_banner.png
+thumbnail: src/assets/blog/theme_banner.png
 tags:
   - Development
   - Best Practices
 ---
+
 As a web developer, I’ve spent a lot of time searching for the perfect dark theme for my editor. I’ve been using Atom’s iconic **One Dark Pro** theme, specifically its darker variant, for quite a while. It’s one of the most installed themes for VS Code, and I love its syntax highlighting. However, even the darker variant didn’t quite hit the mark for me. I also really liked the clean look of the native **Dark Modern** theme in VS Code, but I missed the syntax colors from One Dark Pro. So, I made my own theme.
 
 ### One Dark Modern Pro ⚛️
 
 A **VS Code theme** that combines the best of both worlds:
 
-* Syntax highlighting from Atom’s One Dark theme, which I’ve always loved.
-* Clean UI colors by VS Code's Dark Modern theme, that don’t distract from the code.
-* A darker background that helps with focus and reduces eye strain.
+- Syntax highlighting from Atom’s One Dark theme, which I’ve always loved.
+- Clean UI colors by VS Code's Dark Modern theme, that don’t distract from the code.
+- A darker background that helps with focus and reduces eye strain.
 
-![Image of code example using One Dark Modern Pro VS code theme](/images/code-example.png)
+![Image of code example using One Dark Modern Pro VS code theme](src/assets/blog/code-example.png)
 
 ## Try It Out
 
