--- a/src/content/blog/snowfall-effect-css-javascript.mdx
+++ b/src/content/blog/snowfall-effect-css-javascript.mdx
@@ -2,7 +2,7 @@
 title: 'Creating a Snowfall Effect with CSS and JavaScript'
 description: 'In this blog post, we will go over how to create a snowfall effect using CSS and JavaScript. This effect can be used to add a wintery touch to your website, making it perfect for the holiday season.'
 date: 2022-12-10T12:34:56.000Z
-thumbnail: '/public/images/pexels-kristin-vogt-54200.jpg'
+thumbnail: src/assets/blog/pexels-kristin-vogt-54200.jpg
 tags:
   - Frontend
   - JavaScript
