--- a/src/content/blog/tailwind-css-in-2023.mdx
+++ b/src/content/blog/tailwind-css-in-2023.mdx
@@ -2,7 +2,7 @@
 title: 'Tailwind CSS in 2023: Features, Use-Cases, and Best Practices'
 description: 'Discover real-world applications and the pros and cons of Tailwind CSS as of 2023. This blog post aims to equip developers with the knowledge to make informed decisions about using Tailwind CSS in their projects.'
 date: 2023-09-03T15:41:00.000Z
-thumbnail: '/public/images/tailwind-css-in-2023.png'
+thumbnail: src/assets/blog/tailwind-css-in-2023.png
 tags:
   - Frontend
   - Tailwind CSS
