fix: update heading level for One Dark Modern Pro section in theme blog post

--- a/src/content/blog/one-dark-modern-pro-the-perfect-vs-code-theme.mdx
+++ b/src/content/blog/one-dark-modern-pro-the-perfect-vs-code-theme.mdx
@@ -13,7 +13,7 @@ tags:
 
 As a web developer, I’ve spent a lot of time searching for the perfect dark theme for my editor. I’ve been using Atom’s iconic **[One Dark Pro](https://marketplace.visualstudio.com/items?itemName=zhuangtongfa.Material-theme)** theme, specifically its darker variant, for quite a while. It’s one of the most installed themes for VS Code, and I love its syntax highlighting. However, even the darker variant didn’t quite hit the mark for me. I also really liked the clean look of the native **[Dark Modern](https://github.com/microsoft/vscode/blob/main/extensions/theme-defaults/themes/dark_modern.json)** theme in VS Code, but I missed the syntax colors from One Dark Pro. So, I made my own theme.
 
-### One Dark Modern Pro ⚛️
+## One Dark Modern Pro ⚛️
 
 A **VS Code theme** that combines the best of both worlds:
 
