chore: bump deps, fix breaking astro/decap change, update decap version

--- a/src/content/blog/first-github-pull-request-tutorial.mdx
+++ b/src/content/blog/first-github-pull-request-tutorial.mdx
@@ -2,7 +2,7 @@
 title: "Your First GitHub Pull Request: A Beginner's Tutorial"
 description: 'Master the art of GitHub Pull Requests with this beginner-friendly guide. Gain expert insights and step-by-step instructions for creating flawless PRs.'
 date: '2023-09-02T15:41:00.000Z'
-thumbnail: src/assets/blog/github-first-pr-guide.png
+thumbnail: ../../assets/blog/github-first-pr-guide.png
 tags:
   - Development
   - Git
