--- a/src/content/blog/ollama-deepseek-r1-unsupported-amd-radeon-6600xt.mdx
+++ b/src/content/blog/ollama-deepseek-r1-unsupported-amd-radeon-6600xt.mdx
@@ -2,7 +2,7 @@
 title: 'Running DeepSeek R1 via Ollama on Windows with an Unsupported AMD GPU (RX 6600 XT)'
 description: 'A step-by-step guide to running DeepSeek R1 on Windows with an unsupported AMD GPU like the Radeon RX 6600 XT using a community-maintained Ollama fork and ROCm libraries.'
 date: 2025-01-29T12:00:00.000Z
-thumbnail: src/assets/blog/deepseek-chat.png
+thumbnail: ../../assets/blog/deepseek-chat.png
 tags:
   - AI
   - LLM
@@ -81,7 +81,7 @@ With the setup complete, install DeepSeek R1 using Ollama:
    ```
 3. This will download and install the model. Once complete, the chat interface will start.
 
-![DeepSeek R1 running in Windows Terminal](src/assets/blog/ollama-deepseek-terminal.png)
+![DeepSeek R1 running in Windows Terminal](../../assets/blog/ollama-deepseek-terminal.png)
 
 4. To exit the chat, type:
    ```bash
