--- a/src/content/blog/one-dark-modern-pro-the-perfect-vs-code-theme.mdx
+++ b/src/content/blog/one-dark-modern-pro-the-perfect-vs-code-theme.mdx
@@ -5,7 +5,7 @@ description: Upgrade your VS Code experience with One Dark Modern Pro, a sleek
   Code’s Dark Modern UI.
 date: 2025-02-06
 author: aleksa-codes
-thumbnail: src/assets/blog/theme-banner.png
+thumbnail: ../../assets/blog/theme-banner.png
 tags:
   - Development
   - Best Practices
@@ -21,7 +21,7 @@ A **VS Code theme** that combines the best of both worlds:
 - Clean UI colors by VS Code's Dark Modern theme, that don’t distract from the code.
 - A darker background that helps with focus and reduces eye strain.
 
-![Image of code example using One Dark Modern Pro VS code theme](src/assets/blog/code-example.png)
+![Image of code example using One Dark Modern Pro VS code theme](../../assets/blog/code-example.png)
 
 ## Try It Out
 
