--- a/src/content/blog/becoming-a-web-developer-in-2023.mdx
+++ b/src/content/blog/becoming-a-web-developer-in-2023.mdx
@@ -2,7 +2,7 @@
 title: 'The Ultimate Guide to Starting a Career in Web Development in 2023'
 description: "Get started on your career in web development in 2023 with this ultimate guide. Learn how to build your skills, gain real-world experience, and find job opportunities. Follow our roadmap and you'll be well on your way to success in the exciting field of web development."
 date: 2022-12-31T14:58:16.000Z
-thumbnail: src/assets/blog/pexels-olia-danilevich-4974915.jpg
+thumbnail: ../../assets/blog/pexels-olia-danilevich-4974915.jpg
 tags:
   - Development
   - Best Practices
